<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profileupdate"
            android:title="@string/nav_profle" />
        <item
            android:id="@+id/nav_pass"
            android:icon="@drawable/changepassword"
            android:title="@string/nav_pass" />

        <item
            android:id="@+id/nav_lang"
            android:icon="@drawable/ic_language"
            android:title="@string/nav_lang" />

        <item
            android:id="@+id/nav_refer"
            android:icon="@drawable/refer"
            android:title="@string/nav_refer" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/helpandsupport"
            android:title=""
            app:actionLayout="@layout/nav_spinner" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/privacy"
            android:title="@string/nav_privacy" />
        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/terms"
            android:title="@string/nav_terms" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/nav_logout" />
        <item
            android:id="@+id/nav_stop"
            android:icon="@drawable/stop"
            android:title="@string/nav_stop" />
    </group>


</menu>
