<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_one"
    tools:context=".Activities.ChangePassword">

    <EditText
        android:id="@+id/editOtp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_edittext_white"
        android:ems="10"
        android:hint="@string/otp"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:textColor="@color/cardview_light_background"
        android:textColorHint="@color/gray_very_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editContact" />

    <EditText
        android:id="@+id/editContact"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_edittext_white"
        android:ems="10"
        android:hint="Enter registered contact"
        android:inputType="phone"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:textColor="@color/cardview_light_background"
        android:textColorHint="@color/cardview_light_background"
        app:layout_constraintEnd_toStartOf="@+id/tvResend"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editOtp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editPass"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_edittext_white"
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:textColor="@color/cardview_light_background"
        android:textColorHint="@color/gray_very_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editOtp" />

    <EditText
        android:id="@+id/editConfPass"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/rounded_edittext_white"
        android:ems="10"
        android:hint="@string/enter_conf_pass"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="5dp"
        android:textColor="@color/cardview_light_background"
        android:textColorHint="@color/gray_very_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPass" />

    <Button
        android:id="@+id/btnChangePass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button_white"
        android:padding="10dp"
        android:text="@string/change_pass"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/editConfPass"
        app:layout_constraintStart_toStartOf="@+id/editConfPass"
        app:layout_constraintTop_toBottomOf="@+id/editConfPass" />

    <Button
        android:id="@+id/btnOtp"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:background="@drawable/rounded_button_white"
        android:text="@string/opt_btn"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/editContact"
        app:layout_constraintEnd_toEndOf="@+id/tvResend"
        app:layout_constraintTop_toTopOf="@+id/editContact" />

    <TextView
        android:id="@+id/tvResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="5dp"
        android:text="@string/resend_otp"
        android:textColor="@color/cardview_light_background"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/editContact"
        app:layout_constraintEnd_toEndOf="@+id/editOtp"
        app:layout_constraintTop_toTopOf="@+id/editContact" />
</android.support.constraint.ConstraintLayout>