<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activities.UserProfile">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/head_image"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:elevation="5dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/head_image"
            app:srcCompat="@drawable/profile_pic" />

        <TextView
            android:id="@+id/textView39"
            android:layout_width="100dp"
            android:layout_height="25dp"
            android:background="#5b000000"
            android:gravity="center"
            android:text="@string/update_profile_pic"
            app:layout_constraintBottom_toBottomOf="@+id/profileImage"
            app:layout_constraintEnd_toEndOf="@+id/profileImage"
            app:layout_constraintStart_toStartOf="@+id/profileImage" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="UserName"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView43"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/divider10"
            app:layout_constraintTop_toTopOf="@+id/textView43"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView43"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/user_name"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/divider5"
            app:layout_constraintTop_toBottomOf="@+id/textView57" />

        <TextView
            android:id="@+id/textView47"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/user_contact"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/divider5"
            app:layout_constraintTop_toBottomOf="@+id/textView43" />

        <TextView
            android:id="@+id/tvContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="Contact"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView47"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvName"
            app:layout_constraintTop_toTopOf="@+id/textView47"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView49"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/user_email"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/divider5"
            app:layout_constraintTop_toBottomOf="@+id/textView24" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="Email"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView49"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.007"
            app:layout_constraintStart_toStartOf="@+id/tvContact"
            app:layout_constraintTop_toTopOf="@+id/textView49"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView51"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/user_address"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/divider5"
            app:layout_constraintTop_toBottomOf="@+id/textView49" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:maxLines="2"
            android:text="Address"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView51"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvEmail"
            app:layout_constraintTop_toTopOf="@+id/textView51"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView53"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="8dp"
            android:text="@string/user_dob"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/divider5"
            app:layout_constraintTop_toBottomOf="@+id/textView48" />

        <TextView
            android:id="@+id/tvDob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DOB"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView53"
            app:layout_constraintStart_toStartOf="@+id/tvAddress"
            app:layout_constraintTop_toTopOf="@+id/textView53" />

        <TextView
            android:id="@+id/textView57"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="ID:"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/framerId"
            app:layout_constraintTop_toBottomOf="@+id/textView39" />

        <TextView
            android:id="@+id/framerId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ID"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView57"
            app:layout_constraintEnd_toEndOf="@+id/profileImage"
            app:layout_constraintStart_toStartOf="@+id/profileImage"
            app:layout_constraintTop_toTopOf="@+id/textView57" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/user_alt_contact"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/divider5"
            app:layout_constraintTop_toBottomOf="@+id/textView47" />

        <TextView
            android:id="@+id/tvAltContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="-"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView24"
            app:layout_constraintStart_toStartOf="@+id/tvContact"
            app:layout_constraintTop_toTopOf="@+id/textView24" />

        <TextView
            android:id="@+id/textView48"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:text="@string/user_full_address"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/divider5"
            app:layout_constraintTop_toBottomOf="@+id/textView51" />

        <TextView
            android:id="@+id/tvFullAdress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="-"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView48"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tvAddress"
            app:layout_constraintTop_toTopOf="@+id/textView48"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/btnUpdateOp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_button_dark"
            android:padding="5dp"
            android:text="@string/update_profile_btn"
            android:textColor="@color/cardview_light_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/head_image" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/edit_name"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/textView43"
            app:layout_constraintStart_toEndOf="@+id/textView43"
            app:layout_constraintTop_toTopOf="@+id/textView43" />

        <EditText
            android:id="@+id/editAltContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/edit_alt_contact"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/textView24"
            app:layout_constraintStart_toEndOf="@+id/textView24"
            app:layout_constraintTop_toTopOf="@+id/textView24" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/edit_email"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/textView49"
            app:layout_constraintStart_toEndOf="@+id/textView49"
            app:layout_constraintTop_toTopOf="@+id/textView49" />

        <EditText
            android:id="@+id/editFullAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/edit_full_address"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/textView48"
            app:layout_constraintStart_toEndOf="@+id/textView48"
            app:layout_constraintTop_toTopOf="@+id/textView48" />

        <EditText
            android:id="@+id/editDob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/edit_dob"
            android:inputType="textPersonName"
            android:padding="5dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/textView53"
            app:layout_constraintStart_toEndOf="@+id/textView53"
            app:layout_constraintTop_toTopOf="@+id/textView53" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editDob">

            <Button
                android:id="@+id/btnUpdate"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:background="@drawable/rounded_button_dark"
                android:text="Update"
                android:textColor="@color/cardview_light_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/rounded_button_dark"
                android:text="Cancel"
                android:textColor="@color/cardview_light_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btnUpdate"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>

        <EditText
            android:id="@+id/editContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/rounded_edittext"
            android:ems="10"
            android:hint="@string/edit_contact"
            android:inputType="phone"
            android:padding="5dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/textView47"
            app:layout_constraintStart_toEndOf="@+id/textView47"
            app:layout_constraintTop_toTopOf="@+id/textView47" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider5"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider10"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>